# riichi-calc

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: example_pinfu.rs  example_suanko.rs
src/: calculator.rs  constants.rs  core.rs  finder.rs  lib.rs  parser.rs
src/calculator/: actual_points.rs  fu.rs  result.rs  score.rs
src/calculator/fu/: agari.rs  futei.rs  machi.rs  mentsu.rs
src/calculator/score/: child.rs  dealer.rs
src/constants/: field.rs  found_yaku.rs  hand.rs  status.rs  tiles.rs
src/constants/tiles/: dragon.rs  manzu.rs  pinzu.rs  souzu.rs  wind.rs
src/finder/: dora.rs  finder.rs  finder_base.rs  ii_han.rs  result.rs  roku_han.rs  ryan_han.rs  san_han.rs  test_utils.rs  utils.rs  yakuman.rs
src/finder/dora/: aka.rs  dora_finder.rs  omote.rs  ura.rs
src/finder/ii_han/: bakaze.rs  chankan.rs  chun.rs  haitei.rs  haku.rs  hatu.rs  hotei.rs  iipeco.rs  ipatu.rs  pinfu.rs  riichi.rs  rinshan.rs  tanyao.rs  tumo.rs  zikaze.rs
src/finder/roku_han/: chinitu.rs
src/finder/ryan_han/: chanta.rs  double_riichi.rs  honroto.rs  ixtukitukan.rs  sananko.rs  sankantu.rs  sanshoku_dojun.rs  sanshoku_doko.rs  shosangen.rs  toitoi.rs
src/finder/san_han/: honitu.rs  junchan.rs  riyan_peco.rs
src/finder/yakuman/: chiho.rs  chinroto.rs  churen.rs  daisangen.rs  ryuiso.rs  shosushi.rs  suanko.rs  sukantu.rs  tenho.rs  tuiso.rs
src/parser/: field_input.rs  input.rs  input_base.rs  pi_input.rs  status_input.rs
src/parser/pi_input/: hand_creator.rs
