[package]
name = "riichi-calc"
version = "0.1.0"
authors = ["Takafumi Sakai <tt3.sakai@gmail.com>"]
readme = "README.md"
edition = "2021"
license = "MIT"
description = "Library to calculate the score of a hand in riichi mahjong"
repository = "https://github.com/SakaiTaka23/riichi-calc"
keywords = ["riichi", "mahjong", "game-game"]
categories = ["algorithms", "games"]
exclude = [
    ".gitignore",
    "examples"
]

[dependencies]
rand = "0.8.5"

[dev-dependencies]
lazy_static = "1.5.0"
